--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ nav {
     top: 0px;
     z-index: 99;
     position: sticky;
+    align-items: center;
 }
 
 .nav-links{
@@ -30,7 +31,7 @@ nav {
     display: grid;
     color: white;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 1.5vw;
     border: solid;
     border-color: black;
     border-width: 1px;
@@ -42,24 +43,65 @@ nav {
     color: black;
 }
 
+#nav-brand{
+    display: grid;
+    grid-column: 2 / span 2;
+    /* background-color: black; */
+    width: 100%;
+    height: 3vw;
+    background-image: url("/img/Logo.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+.search{
+    grid-column-start: 5;
+    width: 100%;
+    height: 100%;
+    background-color: red;
+}
+
+.search-bar{
+    height: 40%;
+    float: left;
+    width: 10vw;
+    border: 2px solid blue;
+    border-right: none;
+    border-radius: 50px 0 0 50px;
+}
+
+.search-button{
+    width: 10%;
+    height: 50%;
+    border: 2px solid blue;
+    border-left: none;
+    height: 3vw;
+    border-radius: 0px 50px 50px 0px;
+}
+
 @media screen and (max-width: 768px){
 
-    .line {
+    .line{
         width: 30px;
         height: 3px;
         background: white;
         margin: 5px;
     }
 
-    nav {
+    nav{
         display: grid;
         grid-auto-flow: row;
         position: sticky;
         top: 0px;
         z-index: 99;
     }
+
+    #nav-brand{
+        grid-column: 8 / span 2;
+        z-index: 99;
+    }
     
-    .hamburger {
+    .hamburger{
         position: absolute;
         cursor: pointer;
         right: 5%;
@@ -68,7 +110,7 @@ nav {
         z-index: 2;
     }
 
-    .nav-links {
+    .nav-links{
         grid-auto-flow: row;
         grid-template-columns: 1fr;
         position: fixed;
@@ -80,17 +122,17 @@ nav {
         transition: all 1s ease-out;
     }
 
-    .nav-links a {
+    .nav-links a{
         grid-auto-flow: row;
     }
 
-    .nav-links.open {
+    .nav-links.open{
         clip-path: circle(1500px at 90% -10%);
         -webkit-clip-path: circle(1500px at 90% -10%); 
     }
 }
 
 #landing-page {
-    height:100vw;
+    height:100vh;
     background-color: grey;
 }
