--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ nav {
     /* background-color: black; */
     width: 100%;
     height: 3vw;
-    background-image: url("/img/Logo.png");
+    background-image: url("img/Logo.png");
     background-size: contain;
     background-repeat: no-repeat;
 }
