--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ nav {
 /*    BUTTON    */
 
  .button{
-     transition: 0.5s;
+     transition-duration: 2s;
  }
 
  .button:hover{
@@ -158,7 +158,6 @@ nav {
 
  .signUp{
      background-color: rgba(var(--button-colour),0.5);
-     /*opacity: 0.5;*/
      padding: 20px 50px;
      position: relative;
      left: 200px;
@@ -169,11 +168,10 @@ nav {
  /*    CLOSE BUTTON   */
 
  .close{
-     /*display: none;*/
+     display: none;
      padding: 20px 20px;
      position: absolute;
      right: 0;
-     background-color: rgba(var(--button-colour),0.5);
  }
 
  /*     BLUR     */
@@ -182,7 +180,7 @@ nav {
      width: 100vw;
      height: 100vh;
      z-index: 1;
-     transition:2s;
+     transition: 2s;
  }
 
  #blur>div{
@@ -192,5 +190,5 @@ nav {
      bottom:5%;
      width:80%;
      height: 80%;
-     transition: 2s;
+     transition: 2.5s;
  }
