--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
- * {
-     margin: 0;
-     padding: 0;
-     box-sizing: border-box;
- }
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
- :root{
-     --button-colour: 63, 179, 255;
- }
+:root{
+    --button-colour: 63, 179, 255;
+}
 
 nav {
     height: 10vh;
@@ -58,32 +58,72 @@ nav {
     background-repeat: no-repeat;
 }
 
-.search{
-    grid-column-start: 5;
+
+.search-nav{
+    grid-column: 6 / span 3;
+    /* background-color: red; */
     width: 100%;
-    height: 100%;
-    background-color: red;
 }
 
-.search-bar{
-    height: 40%;
+.search-main{
+    grid-column: 4 /span 10;
+    grid-row: 6/ span 1;
+    display: none;
+}
+
+form.search input[type=text] {
+    padding: 10px;
+    font-size: 17px;
+    border: 1px solid blue;
+    border-radius: 50px 0px 0px 50px;
     float: left;
-    width: 10vw;
-    border: 2px solid blue;
-    border-right: none;
-    border-radius: 50px 0 0 50px;
+    width: 80%;
+    background: #f1f1f1;
 }
 
-.search-button{
-    width: 10%;
-    height: 50%;
-    border: 2px solid blue;
-    border-left: none;
-    height: 3vw;
+form.search button {
+    float: left;
+    width: 20%;
+    padding: 10px;
+    background: #2196F3;
+    color: white;
+    font-size: 17px;
+    border: 1px solid blue;
     border-radius: 0px 50px 50px 0px;
+    border-left: none;
+    cursor: pointer;
+}
+
+form.search button:hover {
+    background: #0b7dda;
+}
+
+form.search::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+input[name=search]:focus{
+    outline:none;
+}
+
+#landing-page{
+    height: 100vh;
+    display: grid;
+    grid-template-columns: repeat(16, 1fr);
+    grid-template-rows: repeat(10, 1fr);
 }
 
 @media screen and (max-width: 768px){
+
+    .search-nav{
+        display:none;  /* nav search bar gets removed when in mobile */
+    }
+
+    .search-main{
+        display: block;
+    }
 
     .line{
         width: 30px;
@@ -133,45 +173,45 @@ nav {
 
     .nav-links.open{
         clip-path: circle(1500px at 90% -10%);
-        -webkit-clip-path: circle(1500px at 90% -10%); 
+        -webkit-clip-path: circle(1500px at 90% -10%);
     }
 }
 
 #landing-page {
     position:relative;
     background-size: cover;
-    background-image: url("img/background_landing.png");
+    background-image: url("Images/Background.png");
 }
 
- btn#signUp{
-     background-color: rgba(var(--button-colour),0.5);
-     /*opacity: 0.5;*/
-     padding: 20px 50px;
-     position: relative;
-     left: 200px;
-     top: 200px;
-     transition: 0.5s;
-     z-index: 1;
- }
+btn#signUp{
+    background-color: rgba(var(--button-colour),0.5);
+    /*opacity: 0.5;*/
+    padding: 20px 50px;
+    position: relative;
+    left: 200px;
+    top: 200px;
+    transition: 0.5s;
+    z-index: 1;
+}
 
- btn#signUp:hover{
-     cursor: pointer;
-     background-color: rgba(var(--button-colour), 0.75);
- }
+btn#signUp:hover{
+    cursor: pointer;
+    background-color: rgba(var(--button-colour), 0.75);
+}
 
- div#blur{
-     width: 100vw;
-     height: 100vh;
-     z-index: 1;
-     transition:2s;
- }
+div#blur{
+    width: 100vw;
+    height: 100vh;
+    z-index: 1;
+    transition:2s;
+}
 
- #blur>div{
-     position:fixed;
-     justify-content: center;
-     left:10%;
-     bottom:5%;
-     width:80%;
-     height: 80%;
-     transition: 2s;
- }
+#blur>div{
+    position:fixed;
+    justify-content: center;
+    left:10%;
+    bottom:5%;
+    width:80%;
+    height: 80%;
+    transition: 2s;
+}
