--- a/style.css
+++ b/style.css
@@ -144,13 +144,20 @@ nav {
 
 /*    BUTTON    */
 
+ .buttons{
+     z-index: 1;
+     position: absolute;
+     margin: 20px;
+     left: 50%;
+     top: 50%;
+     transform: translate(-50%,-50%);
+ }
+
  .button-style{
      transition-duration: 2s;
      background-color: rgba(var(--button-colour),0.5);
      padding: 20px 50px;
      position: relative;
-     left: 200px;
-     top: 200px;
      z-index: 1;
  }
 
@@ -187,8 +194,9 @@ nav {
 
  #blur>div{
      position:fixed;
-     justify-content: center;
-     left:6%;
+     max-width: 768px;
+     left: 50%;
+     transform: translateX(-50%);
      bottom:5%;
      width:88%;
      height: 80%;
