Changed styling of main page. Buttons need to be fixed.

--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ nav {
     background: #5b78c7;
     display: grid;
     grid-template-columns: repeat(16, 1fr);
+    grid-template-rows: 1fr;
+    grid-gap: 0.5%;
     top: 0;
     z-index: 99;
     position: sticky;
@@ -21,9 +23,11 @@ nav {
 }
 
 .nav-links{
+    float: left;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-column: 11 / span 6;
+    grid-row: 1;
+    grid-column: 4 / span 6;
     list-style: none;
     align-items: center;
     text-align: center;
@@ -60,14 +64,15 @@ nav {
 
 
 .search-nav{
-    grid-column: 6 / span 3;
+    grid-column: 10 / span 4;
+    grid-row: 1;
     /* background-color: red; */
     width: 100%;
 }
 
 .search-main{
     grid-column: 4 /span 10;
-    grid-row: 6/ span 1;
+    grid-row: 5/ span 1;
     display: none;
 }
 
@@ -77,16 +82,15 @@ form.search input[type=text] {
     border: 1px solid blue;
     border-radius: 50px 0px 0px 50px;
     float: left;
-    width: 80%;
-    background: #f1f1f1;
+    width: 85%;
+    background: white;
 }
 
 form.search button {
     float: left;
-    width: 20%;
+    width: 15%;
     padding: 10px;
-    background: #2196F3;
-    color: white;
+    background: white;
     font-size: 17px;
     border: 1px solid blue;
     border-radius: 0px 50px 50px 0px;
@@ -108,6 +112,11 @@ form.search::after {
     outline:none;
 } */
 
+.buttons-nav{
+    grid-column: 14 / span 2;
+    height: 50%
+}
+
 #landing-page{
     height: 90vh;
     display: grid;
@@ -117,8 +126,86 @@ form.search::after {
     background-image: url("img/background_landing.png");
 }
 
-@media screen and (max-width: 768px){
 
+/*    BUTTON    */
+
+.buttons-main{
+    display: none;
+    grid-column: 4 /span 10;
+    grid-row: 4/ span 1;
+    width: 100%;
+    height: 80%;
+    align-self: end;
+    z-index: 3;
+}
+
+
+.button-style{
+    transition-duration: 2s;
+    border: none;
+    background-color: rgba(var(--button-colour),0.5);
+    float: left;
+    width: 48.5%;
+    height: 90%;
+    margin-bottom: 10%;
+    border-radius: 50px 50px 50px 50px;
+}
+
+.button-style:hover{
+    cursor: pointer;
+    background-color: rgba(var(--button-colour), 0.75);
+}
+
+.login-button{
+    margin-right: 3%;
+}
+
+
+
+/*    SIGN UP BUTTON   */
+
+
+/*    CLOSE BUTTON   */
+
+.close{
+     display: none;
+     padding: 20px 20px;
+     position: absolute;
+     right: 0;
+ }
+
+.close:hover{
+    cursor: pointer;
+    background-color: rgba(var(--button-colour), 0.75);
+}
+
+/*     Sign Up Page     */
+
+div#blur{
+    width: 100%;
+    height: 100vh;
+    z-index: 1;
+    transition: 2s;
+    position: fixed;
+}
+
+#blur>div{
+    position:fixed;
+    max-width: 768px;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom:5%;
+    width:88%;
+    height: 80%;
+    transition: 2.5s;
+}
+
+div#blur > div > form{
+    display:none;
+    transition:2.5s;
+}
+
+@media screen and (max-width: 768px){
 
     .nav-links a{
         border-bottom: solid;
@@ -187,88 +274,17 @@ form.search::after {
         clip-path: circle(1500px at 90% -10%);
         -webkit-clip-path: circle(1500px at 90% -10%); 
     }
+
+    .buttons-main{
+        display: block;
+    }
+
+    .buttons-nav{
+        display: none;
+    }
+
+    .button-style:hover{
+        cursor: pointer;
+        background-color: rgba(var(--button-colour), 0.75);
+    }
 }
-
-/*#landing-page {*/
-/*    position:relative;*/
-/*    background-size: cover;*/
-/*    background-image: url("img/background_landing.png");*/
-/*}*/
-
-/*    BUTTON    */
-
- .buttons{
-     grid-column: 4 /span 10;
-     grid-row: 5/ span 1;
-     width: 100%;
-     height: 80%;
-     align-self: end;
- }
-
- .button-style{
-     transition-duration: 2s;
-     border: none;
-     background-color: rgba(var(--button-colour),0.5);
-     /*padding: 20px 50px;*/
-     /*position: relative;*/
-     /*z-index: 2;*/
-     float: left;
-     width: 48.5%;
-     height: 90%;
-     margin-bottom: 10%;
-     border-radius: 50px 50px 50px 50px;
- }
-
- .button-style:hover{
-     cursor: pointer;
-     background-color: rgba(var(--button-colour), 0.75);
- }
-
- .loginBtn{
-     margin-right: 3%;
- }
-
-
-
-/*    SIGN UP BUTTON   */
-
-
- /*    CLOSE BUTTON   */
-
- .close{
-      display: none;
-      padding: 20px 20px;
-      position: absolute;
-      right: 0;
-  }
-
- .close:hover{
-     cursor: pointer;
-     background-color: rgba(var(--button-colour), 0.75);
- }
-
- /*     Sign Up Page     */
-
- div#blur{
-     width: 100%;
-     height: 100vh;
-     z-index: 1;
-     transition: 2s;
-     position: fixed;
- }
-
- #blur>div{
-     position:fixed;
-     max-width: 768px;
-     left: 50%;
-     transform: translateX(-50%);
-     bottom:5%;
-     width:88%;
-     height: 80%;
-     transition: 2.5s;
- }
-
- div#blur > div > form{
-     display:none;
-     transition:2.5s;
- }
