--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ nav {
     /* background-color: black; */
     width: 100%;
     height: 3vw;
-    background-image: url("img/Logo.png");
+    background-image: url("img/Logo_aligned.png");
     background-size: contain;
     background-repeat: no-repeat;
 }
@@ -123,7 +123,9 @@ form.search::after {
     grid-template-columns: repeat(16, 1fr);
     grid-template-rows: repeat(10, 1fr);
     background-size: cover;
-    background-image: url("img/background_landing.png");
+    background-image: url("img/background_desktop.png");
+    background-position-x: center;
+    background-position-y: bottom;
 }
 
 
@@ -198,6 +200,7 @@ div#blur{
     width:88%;
     height: 80%;
     transition: 2.5s;
+    z-index: 5;
 }
 
 div#blur > div > form{
@@ -206,6 +209,10 @@ div#blur > div > form{
 }
 
 @media screen and (max-width: 768px){
+
+    #landing-page{
+        background-image: url("img/background_landing.png");
+    }
 
     .nav-links a{
         border-bottom: solid;
@@ -221,6 +228,7 @@ div#blur > div > form{
 
     .search-main{
         display: block;
+        z-index: 4;
     }
 
     .line{
@@ -239,8 +247,12 @@ div#blur > div > form{
     }
 
     #nav-brand{
-        grid-column: 8 / span 2;
+        grid-column: 5 / span 8;
         z-index: 99;
+        height: 75%;
+        width: 100%;
+        background-position: center;
+
     }
 
     .hamburger{
