--- a/style/nav.css
+++ b/style/nav.css
@@ -1,14 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    outline:none;
-}
-
-:root{
-    --button-colour: 63, 179, 255;
-}
-
 nav {
     height: 10vh;
     background: #5b78c7;
@@ -57,7 +46,7 @@ nav {
     /* background-color: black; */
     width: 100%;
     height: 3vw;
-    background-image: url("img/Logo_aligned.png");
+    background-image: url("../img/Logo_aligned.png");
     background-size: contain;
     background-repeat: no-repeat;
 }
@@ -117,102 +106,7 @@ form.search::after {
     height: 50%
 }
 
-#landing-page{
-    height: 90vh;
-    display: grid;
-    grid-template-columns: repeat(16, 1fr);
-    grid-template-rows: repeat(10, 1fr);
-    background-size: cover;
-    background-image: url("img/background_desktop.png");
-    background-position-x: center;
-    background-position-y: bottom;
-}
-
-
-/*    BUTTON    */
-
-.buttons-main{
-    display: none;
-    grid-column: 4 /span 10;
-    grid-row: 4/ span 1;
-    width: 100%;
-    height: 80%;
-    align-self: end;
-    z-index: 3;
-}
-
-
-.button-style{
-    transition-duration: 2s;
-    border: none;
-    background-color: rgba(var(--button-colour),0.5);
-    float: left;
-    width: 48.5%;
-    height: 90%;
-    margin-bottom: 10%;
-    border-radius: 50px 50px 50px 50px;
-}
-
-.button-style:hover{
-    cursor: pointer;
-    background-color: rgba(var(--button-colour), 0.75);
-}
-
-.login-button{
-    margin-right: 3%;
-}
-
-
-
-/*    SIGN UP BUTTON   */
-
-
-/*    CLOSE BUTTON   */
-
-.close{
-     display: none;
-     padding: 20px 20px;
-     position: absolute;
-     right: 0;
- }
-
-.close:hover{
-    cursor: pointer;
-    background-color: rgba(var(--button-colour), 0.75);
-}
-
-/*     Sign Up Page     */
-
-div#blur{
-    width: 100%;
-    height: 100vh;
-    z-index: 1;
-    transition: 2s;
-    position: fixed;
-}
-
-#blur>div{
-    position:fixed;
-    max-width: 768px;
-    left: 50%;
-    transform: translateX(-50%);
-    bottom:5%;
-    width:88%;
-    height: 80%;
-    transition: 2.5s;
-    z-index: 5;
-}
-
-div#blur > div > form{
-    display:none;
-    transition:2.5s;
-}
-
 @media screen and (max-width: 768px){
-
-    #landing-page{
-        background-image: url("img/background_landing.png");
-    }
 
     .nav-links a{
         border-bottom: solid;
@@ -284,11 +178,7 @@ div#blur > div > form{
 
     .nav-links.open{
         clip-path: circle(1500px at 90% -10%);
-        -webkit-clip-path: circle(1500px at 90% -10%); 
-    }
-
-    .buttons-main{
-        display: block;
+        -webkit-clip-path: circle(1500px at 90% -10%);
     }
 
     .buttons-nav{
