Search bar now disappears with sign in and login forms

--- a/style/style.css
+++ b/style/style.css
@@ -299,6 +299,14 @@ div#blur > div > form{
     }
 }
 
+
+
+/* -----------   Forms   ------------ */
+
+#form_signUp > h1{
+    text-align: center;
+}
+
 /* ----------- Centering ------------ */
 
 .centerY{
